kubernetes/cassandra/cassandra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra
spec:
  rules:
    - host: k8s.3tier.webapp.cassandra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaxrs-cassandra-quarkus
                port:
                  number: 8080
